Boilerplate for HTML rendering

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,15 @@
-<p>Hello World</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+</head>
+
+<body>
+    <h2>Tactics</h2>
+    <div id="game"></div>
+</body>
+
+<script type="text/javascript" src="js/board.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
+
+</html>
