--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/tactics.css"/>
 </head>
 
 <body>
     <h2>Tactics</h2>
-    <div id="game"></div>
+    <table id="game"></table>
 </body>
 
 <script type="text/javascript" src="js/board.js"></script>
