--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 </body>
 
 <script type="text/javascript" src="js/board.js"></script>
+<script type="text/javascript" src="js/unit.js"></script>
 <script type="text/javascript" src="js/api.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 
