--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
 <body>
     <h2>Tactics</h2>
     <table id="game"></table>
+    <div id="chat"></div>
+    <input type="text" id="chatmsg" size="40" />
+    <input type="submit" id="chatsend" value="Send" />
 </body>
 
 <script type="text/javascript" src="js/board.js"></script>
