--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,9 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div id="chat">
                     <div class="container">
-                        <div class="border-bottom-0" id="chatlog"></div>
+                        <div class="border-bottom-0" id="chatlog">
+                            <p class="chat-message chat-greeting"><i>Welcome to the chat! Please be nice!</i><p>
+                        </div>
                         <div class="input-group">
                             <input class="form-control" type="text" id="chatmsg"></input>
                             <span class=input-group-btn>
