--- a/public/index.html
+++ b/public/index.html
@@ -15,17 +15,19 @@
                 <table id="game" class="table-bordered"></table>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
-                <div id="chat">
-                    <div class="container">
-                        <div class="border-bottom-0" id="chatlog">
-                            <p class="chat-message chat-greeting"><i>Welcome to the chat! Please be nice!</i><p>
-                        </div>
-                        <div class="input-group">
-                            <input class="form-control" type="text" id="chatmsg"></input>
-                            <span class=input-group-btn>
-                                <button class="btn btn-default" type="button" id="chatsend"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
-                            </span>
-                        </div>
+                <div class="container">
+                    <button class="btn btn-danger" type="button" id="ctrlReset">Reset</button>
+                </div>
+                <hr>
+                <div id="chat" class="container">
+                    <div class="border-bottom-0" id="chatlog">
+                        <p class="chat-message chat-greeting"><i>Welcome to the chat! Please be nice!</i><p>
+                    </div>
+                    <div class="input-group">
+                        <input class="form-control" type="text" id="chatmsg"></input>
+                        <span class=input-group-btn>
+                            <button class="btn btn-default" type="button" id="chatsend"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
+                        </span>
                     </div>
                 </div>
             </div>
