--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-    <h2>Tactics</h2>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-6 col-md-6 col-lg-4">
@@ -16,7 +15,17 @@
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="container">
+                    <div class="game-status">
+                        <h3>Game Status</h3>
+                        <ul>
+                            <li id="ctrlStatusRole"></li>
+                            <li id="ctrlStatusP1"></li>
+                            <li id="ctrlStatusP2"></li>
+                        </ul>
+                    </div>
                     <button class="btn btn-danger" type="button" id="ctrlReset">Reset</button>
+                    <button class="btn btn-success" type="button" id="ctrlSitP1">Sit as Player 1 (X)</button>
+                    <button class="btn btn-success" type="button" id="ctrlSitP2">Sit as Player 2 (O)</button>
                 </div>
                 <hr>
                 <div id="chat" class="container">
@@ -41,6 +50,7 @@
 <script type="text/javascript" src="js/chat.js"></script>
 <script type="text/javascript" src="js/unit.js"></script>
 <script type="text/javascript" src="js/api.js"></script>
+<script type="text/javascript" src="js/status.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 
 </html>
