More responsive buttons for status menu

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
                             <li id="ctrlStatusP2"></li>
                         </ul>
                     </div>
-                    <button class="btn btn-danger" type="button" id="ctrlReset">Reset</button>
+                    <button class="btn btn-danger" type="button" id="ctrlReset">Reset Game</button>
                     <button class="btn btn-success" type="button" id="ctrlSitP1">Sit as Player 1 (X)</button>
                     <button class="btn btn-success" type="button" id="ctrlSitP2">Sit as Player 2 (O)</button>
                 </div>
