--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,8 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-6 col-md-6 col-lg-4">
-                <table id="game" class="table-bordered"></table>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3">
-                <div class="container">
+            <div class="col-md-12 col-lg-4 push-lg-8 col-xl-6 push-xl-6">
+                <div class="container margin-vert">
                     <div class="game-status">
                         <h3>Game Status</h3>
                         <ul>
@@ -38,6 +35,11 @@
                             <button class="btn btn-default" type="button" id="chatsend"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
                         </span>
                     </div>
+                </div>
+            </div>
+            <div class="col-md-12 col-lg-8 pull-lg-4 col-xl-6 pull-xl-6">
+                <div class="container margin-vert">
+                    <table id="game" class="table-bordered table-centered"></table>
                 </div>
             </div>
         </div>
