Cleaned up pieces CSS

--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
                         </ul>
                     </div>
                     <button class="btn btn-danger" type="button" id="ctrlReset">Reset Game</button>
-                    <button class="btn btn-success" type="button" id="ctrlSitP1">Sit as Player 1 (X)</button>
-                    <button class="btn btn-success" type="button" id="ctrlSitP2">Sit as Player 2 (O)</button>
+                    <button class="btn btn-success" type="button" id="ctrlSitP1">Sit as White</button>
+                    <button class="btn btn-success" type="button" id="ctrlSitP2">Sit as Black</button>
                 </div>
                 <hr>
                 <div id="chat" class="container">
