--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script type="text/javascript" src="lib/jquery-3.2.1.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="lib/bootstrap-4.0.0-alpha.6-dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="css/tactics.css"/>
-    <link rel="stylesheet" type="text/css" href="lib/font-awesome-4.7.0/css/font-awesome.min.css"/>
+    <script type="text/javascript" src="/lib/jquery-3.2.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/lib/bootstrap-4.0.0-alpha.6-dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/tactics.css"/>
+    <link rel="stylesheet" type="text/css" href="/lib/font-awesome-4.7.0/css/font-awesome.min.css"/>
 </head>
 
 <body>
@@ -46,13 +46,13 @@
     </div>
 </body>
 
-<script type="text/javascript" src="lib/tether.min.js"></script>
-<script type="text/javascript" src="lib/bootstrap-4.0.0-alpha.6-dist/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/board.js"></script>
-<script type="text/javascript" src="js/chat.js"></script>
-<script type="text/javascript" src="js/unit.js"></script>
-<script type="text/javascript" src="js/api.js"></script>
-<script type="text/javascript" src="js/status.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="/lib/tether.min.js"></script>
+<script type="text/javascript" src="/lib/bootstrap-4.0.0-alpha.6-dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/js/board.js"></script>
+<script type="text/javascript" src="/js/chat.js"></script>
+<script type="text/javascript" src="/js/unit.js"></script>
+<script type="text/javascript" src="/js/api.js"></script>
+<script type="text/javascript" src="/js/status.js"></script>
+<script type="text/javascript" src="/js/index.js"></script>
 
 </html>
