--- a/webapp/private/game.html
+++ b/webapp/private/game.html
@@ -53,6 +53,6 @@
 <script type="text/javascript" src="/js/unit.js"></script>
 <script type="text/javascript" src="/js/api.js"></script>
 <script type="text/javascript" src="/js/status.js"></script>
-<script type="text/javascript" src="/js/index.js"></script>
+<script type="text/javascript" src="/js/main.js"></script>
 
 </html>
