--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -1,1 +1,20 @@
-<h1>Heyyo</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <script type="text/javascript" src="/lib/jquery-3.2.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/lib/bootstrap-4.0.0-alpha.6-dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/lib/font-awesome-4.7.0/css/font-awesome.min.css"/>
+</head>
+
+<body>
+    <div class="container-fluid">
+        <h1>Tactics Go</h1>
+        <ul id="gameList"></ul>
+    </div>
+</body>
+
+<script type="text/javascript" src="/lib/tether.min.js"></script>
+<script type="text/javascript" src="/lib/bootstrap-4.0.0-alpha.6-dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/js/lobby/main.js"></script>
+
+</html>
