--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -9,6 +9,12 @@
 <body>
     <div class="container-fluid">
         <h1>Tactics Go</h1>
+        <hr>
+        <h5>Create a game</h5>
+        <button id="gameCreateSmall" class="btn btn-info">Small</button>
+        <button id="gameCreateLarge" class="btn btn-info">Large</button>
+        <hr>
+        <h5>Join a game</h5>
         <ul id="gameList"></ul>
     </div>
 </body>
