Moved js files into js/game

--- a/webapp/private/game.html
+++ b/webapp/private/game.html
@@ -48,11 +48,11 @@
 
 <script type="text/javascript" src="/lib/tether.min.js"></script>
 <script type="text/javascript" src="/lib/bootstrap-4.0.0-alpha.6-dist/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="/js/board.js"></script>
-<script type="text/javascript" src="/js/chat.js"></script>
-<script type="text/javascript" src="/js/unit.js"></script>
-<script type="text/javascript" src="/js/api.js"></script>
-<script type="text/javascript" src="/js/status.js"></script>
-<script type="text/javascript" src="/js/main.js"></script>
+<script type="text/javascript" src="/js/game/board.js"></script>
+<script type="text/javascript" src="/js/game/chat.js"></script>
+<script type="text/javascript" src="/js/game/unit.js"></script>
+<script type="text/javascript" src="/js/game/api.js"></script>
+<script type="text/javascript" src="/js/game/status.js"></script>
+<script type="text/javascript" src="/js/game/main.js"></script>
 
 </html>
